# rlhf-zero-one

./: pyproject.toml
notebooks/: grpo_agent.ipynb
src/rlhf_zero_one/: __init__.py
