[project]
name = "rlhf-zero-one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MNIKIEMA", email = "nikiemamahamadi01@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
rlhf-zero-one = "rlhf_zero_one:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
