[project]
name = "rlhf-zero-one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MNIKIEMA", email = "nikiemamahamadi01@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "jmespath>=1.1.0",
    "smolagents>=1.24.0",
    "trackio>=0.15.0",
    "transformers>=4.57.6",
    "trl>=0.28.0",
    "vllm>=0.15.1",
]

[project.scripts]
rlhf-zero-one = "rlhf_zero_one:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
